[project]
name = "xhs-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jieba>=0.42.1",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "supabase>=2.31.0",
    "wordcloud>=1.9.6",
]
